fix language switching

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,12 @@
 {
-    "info": {
-        "name": "Federico",
-        "surname": "Torsello"
+  "langs": {
+    "it": {
+      "short": "it",
+      "full": "Italiano"
+    },
+    "en": {
+      "short": "en",
+      "full": "English"
     }
+  }
 }
