--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,6 +1,12 @@
 {
-    "info": {
-        "name": "Federico",
-        "surname": "Torsello"
+  "langs": [
+    {
+      "short": "it",
+      "full": "Italiano"
+    },
+    {
+      "short": "en",
+      "full": "English"
     }
+  ]
 }
