update tailwind, add home page

--- a/public/i18n/cv/it.json
+++ b/public/i18n/cv/it.json
@@ -8,7 +8,7 @@
     "skills": "skills",
     "workExperience": "esperienza lavorativa",
     "educationAndTraining": "istruzione e formazione",
-    "languages": "linguaggi di programmazione",
+    "technologies": "tecnologie utilizzate",
     "platforms": "piattaforme",
     "frameworks": "frameworks",
     "libraries": "librerie",
