--- a/public/i18n/cv/en.json
+++ b/public/i18n/cv/en.json
@@ -8,7 +8,7 @@
     "skills": "skills",
     "workExperience": "work experience",
     "educationAndTraining": "education and training",
-    "languages": "programming languages",
+    "technologies": "technologies used",
     "platforms": "platforms",
     "frameworks": "frameworks",
     "libraries": "libraries",
